--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,28 @@
-*.class
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 
-# Package Files #
-*.jar
-*.war
-*.ear
-!mybatis-generator/mybatis-generator-core-1.3.2.jar
-!mybatis-generator/sqljdbc4-4.0.jar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-.DS_Store
+### IntelliJ IDEA ###
 .idea
+*.iws
 *.iml
-out
-*target*
-
-*.log
+*.ipr
 *.log.*
-*.pyc
+
+### NetBeans ###
+nbproject/private/
+build/
+logs/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+log/
 
