--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- spring版本号 -->
-        <spring.version>4.2.5.RELEASE</spring.version>
+        <spring.version>4.3.1.RELEASE</spring.version>
         <!-- mybatis版本号 -->
         <mybatis.version>3.2.8</mybatis.version>
         <!-- mysql驱动版本号 -->
@@ -29,8 +29,23 @@
         <pageHelper.version>5.1.2</pageHelper.version>
         <!--阿里巴巴数据库连接池版本号-->
         <com.alibaba.version>1.0.16</com.alibaba.version>
+        <zkclient_version>0.1</zkclient_version>
+        <zookeeper_version>3.4.6</zookeeper_version>
     </properties>
     <dependencies>
+        <!--其他模块依赖 start-->
+        <dependency>
+            <groupId>com.lesson</groupId>
+            <artifactId>lesson-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+                    <groupId>org.apache.cxf</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!--其他模块依赖 end-->
         <!-- 添加jstl依赖 -->
         <dependency>
             <groupId>jstl</groupId>
@@ -225,6 +240,36 @@
             <artifactId>jedis</artifactId>
             <version>${jedis.version}</version>
         </dependency>
+
+        <!--dubbo服务依赖 start-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.6.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zookeeper_version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>${zkclient_version}</version>
+        </dependency>
+        <!--dubbo服务依赖 end-->
     </dependencies>
     <profiles>
         <profile>
